--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ rvm:
 env:
   - DB=mysql
 script:
-  - bundle exec rake db:migrate --trace
-  - bundle exec rake db:test:prepare
+  - bundle exec rake db:migrate
   - bundle exec rspec spec/
 before_script:
   - mysql -e 'create database myapp_test'
