--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ env:
   - DB=mysql
 script:
   - bundle exec rake db:migrate
+  - bundle exec rake db:test:prepare
   - bundle exec rspec
 before_script:
+  - bundle install
   - mysql -e 'create database myapp_test'
+services:
+  - mysql
