--- a/config/database.yml
+++ b/config/database.yml
@@ -18,11 +18,9 @@ development:
 # Do not set this db to the same as development or production.
 
 test:
-    <<: *default
-    adapter: mysql2
-    database: myapp_test
-    username: travis
-    encoding: utf8
+  adapter: sqlite3
+  database: ":memory:"
+  timeout: 500
 
 production:
   <<: *default
